--- a/atm_web/public/index.html
+++ b/atm_web/public/index.html
@@ -12,11 +12,11 @@
   <script src="../js/common/angular-route.min.js"></script>
   <script src="../js/common/angular-resource.min.js"></script>
   <script src="../../js/common/angular-cookies.min.js"></script>
+  <script src="../../js/common/ngKookies.min.js"></script>
   <script src="../js/common/angular-css.min.js"></script>
   <script src="../js/app.js"></script>
   <script src="../js/controllers/atmController.js"></script>
   <script src="../js/controllers/loginController.js"></script>
-
   <script src="../js/ckeditor/ckeditor.js"></script>
 
   <script>
@@ -30,7 +30,12 @@
     <!-- Header title -->
     <div class="header_title">
       <div class="header_title_left"><span class="welcome">嘿！欢迎</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="http://localhost:3000/views/account/login.html">登陆</a></span>&nbsp;|&nbsp;<span><a href="http://localhost:3000/views/account/register.html">注册</a></span></div>
-      <div class="header_title_right"><a href="#/profile">个人中心</a></div>
+
+        <a href="#/profile">
+        <div class="header_title_right">
+
+        </div>
+        </a>
     </div>
 
     <!-- Header main -->
