add pageview and events improvements

--- a/atm_web/public/index.html
+++ b/atm_web/public/index.html
@@ -29,7 +29,7 @@
 
     <!-- Header title -->
     <div class="header_title">
-      <div class="header_title_left"><span class="welcome">嘿！欢迎</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span><a href="http://localhost:3000/views/account/login.html">登陆</a></span>&nbsp;|&nbsp;<span><a href="http://localhost:3000/views/account/register.html">注册</a></span></div>
+      <div class="header_title_left"><span class="welcome">嘿！欢迎{{u_name}}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="account_entry"><a href="http://localhost:3000/views/account/login.html">登陆</a>&nbsp;|&nbsp;</span><span class="account_entry"><a href="http://localhost:3000/views/account/register.html">注册</a></span></div>
 
         <a href="#/profile">
         <div class="header_title_right">
