add secret and adjust API

--- a/atm_web/public/index.html
+++ b/atm_web/public/index.html
@@ -35,6 +35,9 @@
         <div class="header_title_right">
 
         </div>
+        <div class="logout" ng-click="logout()">
+          Logout
+        </div>
         </a>
     </div>
 
